common-applications/test-environment/openeuler-devops/workflow-manager/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workflow-manager-service
  namespace: openeuler-devops
spec:
  ports:
  - name: http-port
    port: 20057
    protocol: TCP
    targetPort: 20057
  selector:
    app: workflow-manager
  type: ClusterIP
