common-applications/test-environment/openeuler-devops/workflow-manager/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: workflow-manager-ingress
  namespace: openeuler-devops
spec:
  tls:
    - hosts:
        - eulerpipeline.test.osinfra.cn
      secretName: server-tls
  rules:
  - host: eulerpepeline.test.osinfra.cn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: workflow-manager-service
            port:
              number: 443
  ingressClassName: nginx
